// Vitest Snapshot v1

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="100"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="100"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="200"
            >
              <div
                class="t-input t-size-m t-align-center t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="200"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="300"
            >
              <div
                class="t-input t-size-m t-align-right t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="300"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="100"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="100"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="200"
            >
              <div
                class="t-input t-size-m t-align-center t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="200"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="300"
            >
              <div
                class="t-input t-size-m t-align-right t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="300"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`auto-width.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row t-input-number--auto-width"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap t-input--auto-width"
      value="1"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          autocomplete="off"
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="1"
        />
        <span
          class="t-input__input-pre"
        >
          1
        </span>
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`center.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row t-input-number--auto-width"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap t-input--auto-width"
          value="3"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="3"
            />
            <span
              class="t-input__input-pre"
            >
              3
            </span>
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
        style="width: 250px;"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
        style="width: 300px;"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="100"
        >
          <div
            class="t-input t-size-m t-align-center t-is-error t-input--suffix"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="100"
            />
            <div
              class="t-input__suffix"
            >
              个
            </div>
          </div>
          <div
            class="t-input__tips t-input__tips--error"
          >
            number can not be exceed maximum
          </div>
        </div>
        <button
          class="t-input-number__increase t-is-disabled t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`default.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="1"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          autocomplete="off"
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="1"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`format.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="0 %"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="0 %"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="0.00 %"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="0.00 %"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large-number.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
        style="width: 350px;"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="19999999999999999.00"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="19999999999999999.00"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--row"
        style="width: 350px;"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="0.8975527383412673418"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="0.8975527383412673418"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add t-size-m"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`left.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-is-controls-right t-input-number--column"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-down t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="5"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          autocomplete="off"
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="5"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-up t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`normal.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-size-m t-align-right t-is-default t-input--prefix t-input--suffix"
          >
            <div
              class="t-input__prefix"
            >
              机器：
            </div>
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
            <div
              class="t-input__suffix"
            >
              台
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-number t-size-m t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-right t-is-default t-input--prefix t-input--suffix"
          >
            <div
              class="t-input__prefix"
            >
              <span>
                金额：
              </span>
            </div>
            <input
              autocomplete="off"
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
            <div
              class="t-input__suffix"
            >
              <span>
                元
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-s t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-s"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="3"
            >
              <div
                class="t-input t-size-s t-align-center t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="3"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-s"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="6"
            >
              <div
                class="t-input t-size-m t-align-center t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="6"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-l t-input-number--row"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-remove t-size-l"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.5 7.35h9v1.3h-9v-1.3z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="9"
            >
              <div
                class="t-input t-size-l t-align-center t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="9"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-add t-size-l"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-s t-is-controls-right t-input-number--column"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-s"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="5"
            >
              <div
                class="t-input t-size-s t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="5"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-s"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-is-controls-right t-input-number--column"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="5"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="5"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-l t-is-controls-right t-input-number--column"
          >
            <button
              class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-down t-size-l"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
            <div
              class="t-input__wrap"
              value="10"
            >
              <div
                class="t-input t-size-l t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="10"
                />
              </div>
            </div>
            <button
              class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
              type="button"
            >
              <svg
                class="t-icon t-icon-chevron-up t-size-l"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-s t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="5"
            >
              <div
                class="t-input t-size-s t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-m t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="5"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input-number t-size-l t-input-number--normal"
          >
            <div
              class="t-input__wrap"
              value="10"
            >
              <div
                class="t-input t-size-l t-align-left t-is-default"
              >
                <input
                  autocomplete="off"
                  class="t-input__inner"
                  placeholder="请输入"
                  type="text"
                  value="10"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="hide"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            隐藏文本提示
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="align-left"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            文本提示左对齐
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            type="radio"
            value="align-input"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            文本提示对齐输入框
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              正常提示
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <div
                class="t-input-number t-size-m t-input-number--row"
                style="width: 300px;"
              >
                <button
                  class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-remove t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M3.5 7.35h9v1.3h-9v-1.3z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
                <div
                  class="t-input__wrap"
                  value=""
                >
                  <div
                    class="t-input t-size-m t-align-center t-is-default"
                  >
                    <input
                      autocomplete="off"
                      class="t-input__inner"
                      placeholder="请输入"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="t-input__tips t-input__tips--default"
                  >
                    这是普通文本提示
                  </div>
                </div>
                <button
                  class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-add t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              成功提示
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <div
                class="t-input-number t-size-m t-input-number--row"
                style="width: 300px;"
              >
                <button
                  class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-remove t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M3.5 7.35h9v1.3h-9v-1.3z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
                <div
                  class="t-input__wrap"
                  value=""
                >
                  <div
                    class="t-input t-size-m t-align-center t-is-success"
                  >
                    <input
                      autocomplete="off"
                      class="t-input__inner"
                      placeholder="请输入"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="t-input__tips t-input__tips--success"
                  >
                    校验通过文本提示
                  </div>
                </div>
                <button
                  class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-add t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              警告提示
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <div
                class="t-input-number t-size-m t-input-number--row"
                style="width: 300px;"
              >
                <button
                  class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-remove t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M3.5 7.35h9v1.3h-9v-1.3z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
                <div
                  class="t-input__wrap"
                  value=""
                >
                  <div
                    class="t-input t-size-m t-align-center t-is-warning"
                  >
                    <input
                      autocomplete="off"
                      class="t-input__inner"
                      placeholder="请输入"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="t-input__tips t-input__tips--warning"
                  >
                    校验不通过文本提示
                  </div>
                </div>
                <button
                  class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-add t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              错误提示
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <div
                class="t-input-number t-size-m t-input-number--row"
                style="width: 300px;"
              >
                <button
                  class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-remove t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M3.5 7.35h9v1.3h-9v-1.3z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
                <div
                  class="t-input__wrap"
                  value=""
                >
                  <div
                    class="t-input t-size-m t-align-center t-is-error"
                  >
                    <input
                      autocomplete="off"
                      class="t-input__inner"
                      placeholder="请输入"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="t-input__tips t-input__tips--error"
                  >
                    校验存在严重问题文本提示
                  </div>
                </div>
                <button
                  class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                  type="button"
                >
                  <svg
                    class="t-icon t-icon-add t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`step.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="3.20"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          autocomplete="off"
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="3.20"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
